DRT: refactor customer stats assertions in drt-example test