@@ -19,15 +19,18 @@
 
 package org.matsim.contrib.drt.run.examples;
 
+import static org.assertj.core.api.Assertions.assertThat;
+
 import java.io.IOException;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
-import org.junit.Assert;
+import org.assertj.core.data.Percentage;
 import org.junit.Rule;
 import org.junit.Test;
 import org.matsim.contrib.drt.optimizer.insertion.DrtRequestInsertionRetryParams;
@@ -49,7 +52,6 @@ public class RunDrtExampleIT {
 	@Rule
 	public MatsimTestUtils utils = new MatsimTestUtils();
 
-
 	@Test
 	public void testRunDrtExampleWithRequestRetry() {
 		URL configUrl = IOUtils.extendUrl(ExamplesUtils.getTestScenarioURL("mielec"), "mielec_drt_config.xml");
@@ -65,11 +67,16 @@ public class RunDrtExampleIT {
 		config.controler().setOutputDirectory(utils.getOutputDirectory());
 		RunDrtExample.run(config, false);
 
-		// Early warning system for drastic changes in drt performance with regards to customer experience (see note below)
-		verifyDrtCustomerStatsInReasonableRange(utils.getOutputDirectory(), 0.01,
-				5, 700.11, 381.06, 1081.17);
-	}
+		var expectedStats = Stats.newBuilder()
+				.rejectionRate(0.01)
+				.rejections(5)
+				.waitAverage(700.11)
+				.inVehicleTravelTimeMean(381.06)
+				.totalTravelTimeMean(1081.17)
+				.build();
 
+		verifyDrtCustomerStatsCloseToExpectedStats(utils.getOutputDirectory(), expectedStats);
+	}
 
 	@Test
 	public void testRunDrtStopbasedExample() {
@@ -82,9 +89,15 @@ public class RunDrtExampleIT {
 		config.controler().setOutputDirectory(utils.getOutputDirectory());
 		RunDrtExample.run(config, false);
 
-		// Early warning system for drastic changes in drt performance with regards to customer experience (see note below)
-		verifyDrtCustomerStatsInReasonableRange(utils.getOutputDirectory(), 0.05, 18, 255.6,
-				378.99, 634.59);
+		var expectedStats = Stats.newBuilder()
+				.rejectionRate(0.05)
+				.rejections(18)
+				.waitAverage(255.6)
+				.inVehicleTravelTimeMean(378.99)
+				.totalTravelTimeMean(634.59)
+				.build();
+
+		verifyDrtCustomerStatsCloseToExpectedStats(utils.getOutputDirectory(), expectedStats);
 	}
 
 	@Test
@@ -98,44 +111,42 @@ public class RunDrtExampleIT {
 		config.controler().setOutputDirectory(utils.getOutputDirectory());
 		RunDrtExample.run(config, false);
 
+		var expectedStats = Stats.newBuilder()
+				.rejectionRate(0.03)
+				.rejections(11)
+				.waitAverage(227.56)
+				.inVehicleTravelTimeMean(385.43)
+				.totalTravelTimeMean(612.98)
+				.build();
 
-		// Early warning system for drastic changes in drt performance with regards to customer experience (see note below)
-		verifyDrtCustomerStatsInReasonableRange(utils.getOutputDirectory(), 0.03, 11, 227.56,
-				385.43, 612.98);
+		verifyDrtCustomerStatsCloseToExpectedStats(utils.getOutputDirectory(), expectedStats);
 	}
 
 	/**
-	 *	Early warning system: if customer parameters vary more than 20% above or below the values from commit ee6b608
-	 * 	(March 2021), then the following unit tests will fail. This is meant to serve as a red flag if drt performance
-	 * 	with respect to customer experience changes with drastically. The following customer parameter checked are:
-	 * 	rejectionRate, rejections, waitAverage, inVehicleTravelTimeMean, & totalTravelTimeMean
-	 *
+	 * Early warning system: if customer stats vary more than the defined percentage above or below the expected values
+	 * then the following unit tests will fail. This is meant to serve as a red flag.
+	 * The following customer parameter checked are:
+	 * rejectionRate, rejections, waitAverage, inVehicleTravelTimeMean, & totalTravelTimeMean
 	 */
 
-	private void verifyDrtCustomerStatsInReasonableRange(String outputDirectory, double rejectionRateExpected, double rejectionsExpected,
-														 double waitAverageExpected, double inVehicleTravelTimeMeanExpected, double totalTravelTimeMeanExpected) {
+	private void verifyDrtCustomerStatsCloseToExpectedStats(String outputDirectory, Stats expectedStats) {
 
 		String filename = outputDirectory + "/drt_customer_stats_drt.csv";
 
-		List<String> collect;
-
-		try (
-				Stream<String> lines = Files.lines(Paths.get(filename))
-		) {
-			collect = lines.collect(Collectors.toList());
+		final List<String> collect;
+		try {
+			collect = Files.lines(Paths.get(filename)).collect(Collectors.toList());
 		} catch (IOException e) {
-			e.printStackTrace();
-			throw new RuntimeException("output file not found");
+			throw new RuntimeException(e);
 		}
 
 		int size = collect.size();
-
-		List<String> keys = Arrays.asList(collect.get(0).split(";"));
-		List<String> values = Arrays.asList(collect.get(size - 1).split(";"));
+		List<String> keys = List.of(collect.get(0).split(";"));
+		List<String> lastIterationValues = List.of(collect.get(size - 1).split(";"));
 
 		Map<String, String> params = new HashMap<>();
 		for (int i = 0; i < keys.size(); i++) {
-			params.put(keys.get(i), values.get(i));
+			params.put(keys.get(i), lastIterationValues.get(i));
 		}
 
 		double inVehicleTravelTimeMean = Double.parseDouble(params.get("inVehicleTravelTime_mean"));
@@ -144,19 +155,71 @@ public class RunDrtExampleIT {
 		double rejectionRate = Double.parseDouble(params.get("rejectionRate"));
 		double totalTravelTimeMean = Double.parseDouble(params.get("totalTravelTime_mean"));
 
-
-		Assert.assertEquals("rejection rate is within +-20% of expected value",
-				rejectionRateExpected, rejectionRate, rejectionRateExpected * 0.2);
-		Assert.assertEquals("rejections are within +-20% of expected value",
-				rejectionsExpected, rejections, rejectionsExpected * 0.2);
-		Assert.assertEquals("waitAverage is within +-20% of expected value",
-				waitAverageExpected, waitAverage, waitAverageExpected * 0.2);
-		Assert.assertEquals("inVehicleTravelTimeMean is within +-20% of expected value",
-				inVehicleTravelTimeMeanExpected, inVehicleTravelTimeMean, inVehicleTravelTimeMeanExpected * 0.2);
-		Assert.assertEquals("totalTravelTimeMean is within +-20% of expected value",
-				totalTravelTimeMeanExpected, totalTravelTimeMean, totalTravelTimeMeanExpected * 0.2);
-
+		var percentage = Percentage.withPercentage(20);
+		assertThat(expectedStats.rejectionRate).isCloseTo(rejectionRate, percentage);
+		assertThat(expectedStats.rejections).isCloseTo(rejections, percentage);
+		assertThat(expectedStats.waitAverage).isCloseTo(waitAverage, percentage);
+		assertThat(expectedStats.inVehicleTravelTimeMean).isCloseTo(inVehicleTravelTimeMean, percentage);
+		assertThat(expectedStats.totalTravelTimeMean).isCloseTo(totalTravelTimeMean, percentage);
 	}
 
+	private static class Stats {
+		private final double rejectionRate;
+		private final double rejections;
+		private final double waitAverage;
+		private final double inVehicleTravelTimeMean;
+		private final double totalTravelTimeMean;
 
+		private Stats(Builder builder) {
+			rejectionRate = builder.rejectionRate;
+			rejections = builder.rejections;
+			waitAverage = builder.waitAverage;
+			inVehicleTravelTimeMean = builder.inVehicleTravelTimeMean;
+			totalTravelTimeMean = builder.totalTravelTimeMean;
+		}
+
+		public static Builder newBuilder() {
+			return new Builder();
+		}
+
+		public static final class Builder {
+			private double rejectionRate;
+			private double rejections;
+			private double waitAverage;
+			private double inVehicleTravelTimeMean;
+			private double totalTravelTimeMean;
+
+			private Builder() {
+			}
+
+			public Builder rejectionRate(double val) {
+				rejectionRate = val;
+				return this;
+			}
+
+			public Builder rejections(double val) {
+				rejections = val;
+				return this;
+			}
+
+			public Builder waitAverage(double val) {
+				waitAverage = val;
+				return this;
+			}
+
+			public Builder inVehicleTravelTimeMean(double val) {
+				inVehicleTravelTimeMean = val;
+				return this;
+			}
+
+			public Builder totalTravelTimeMean(double val) {
+				totalTravelTimeMean = val;
+				return this;
+			}
+
+			public Stats build() {
+				return new Stats(this);
+			}
+		}
+	}
 }
